[tool.poetry]
name = "poetry-python"
version = "0.1.0"
description = ""
authors = ["rox87 <rodrigohbx@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry"}]

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
